syntax = "proto3";
package operating_system;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/rickypai/web-template/api/protobuf/operating_system";

message OperatingSystem {
  int64 id = 1;

  string name = 2;

  google.protobuf.Timestamp created_at = 9000;

  google.protobuf.Timestamp modified_at = 9001;
}

message OperatingSystemRecord {
  int64 id = 1;

  string name = 2;

  google.protobuf.Timestamp created_at = 9000;

  google.protobuf.Timestamp modified_at = 9001;
}

message OperatingSystemCreateRequest {
  // same field number to ensure wire-compatbility
  string name = 2;
}
